plugins {
    id 'org.springframework.boot' version '2.6.4'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'application'
}

group = 'com.FTHLBOT'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

application{
    mainClass = "com.fthlbot.discordbotfthl.DiscordBotFthlApplication"
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'mysql:mysql-connector-java'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.javacord:javacord:3.4.0'
    runtimeOnly 'org.apache.logging.log4j:log4j-core:2.17.1'

    implementation 'com.google.code.gson:gson:2.9.0'
    implementation group: 'org.json', name: 'json', version: '20210307'
    implementation'com.github.SaHHiiLL:JClash:1.2.2'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'

}

tasks.named('test') {
    useJUnitPlatform()
}
